migrate Custom Mana Effects